--- a/page.html
+++ b/page.html
@@ -59,13 +59,15 @@
 
 <body>
     <div class="container">
-        <h1>Welcome to the Front Page</h1>
-        <p>This is the front page content.</p>
-        <!-- Link to the second page -->
+        <h1>Welcome to the Documentation</h1>
 
 
         <h2 class="section-title">Resources</h2>
-        <p>Information about resources...</p>
+
+        <li><a href="https://developer.mozilla.org/en-US/docs/Web/API/WebGL_API">Documentation of Web gl</a></li>
+
+
+        <li> <a href="https://www.youtube.com/watch?v=bP7_FeP9kU4&list=PL2935W76vRNHFpPUuqmLoGCzwx_8eq5yK">Youtube Video</a></li>
 
         <h2 class="section-title">Ideation</h2>
         <p>Information about ideation...</p>
