--- a/page.html
+++ b/page.html
@@ -78,7 +78,7 @@
         <h2 class="section-title">Overcoming</h2>
         <p>Information about overcoming challenges...</p>
 
-        <a class="btn" href="index.html">Go to the second page</a>
+        <a class="btn" href="https://tanishq2003be.github.io/animation-frame.github.io/">Go to the second page</a>
     </div>
 </body>
 
