--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" class="h-full w-full">
 
 <head>
-    <title>0x08 : 2D Animations (Project)</title>
+    <title>0x08 : 2D Animations (DAWN TO DUSK)</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
@@ -44,7 +44,7 @@
     <div class="container flex flex-col nowrap gap-2 p-8 h-full m-auto">
         <header class="flex flex-col md:flex-row justify-between md:items-end">
             <h1 class="flex-none text-2xl font-bold">
-                0x08 : 2D Animations (Project)
+                0x08 : 2D Animations (DAWN TO DUSK)
             </h1>
 
             <button id="download-btn">
